#11 fix list tag from database